# cfc_collision_ros

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ros_noetic_ci.yml
config/: ompl_planner.yaml
data/: config.h
include/planning_app/: collision_common.h  collision_helper.h  ompl_planner.h
include/util/: MultiBodyTree3D.h  ParsePlanningSettings.h  ParseURDF.h  VisualizationUtils.h  imarker.h  interactive_robot.h  pose_string.h
launch/: moveit_ik_solver.launch  moveit_ik_solver_real.launch  moveit_visualize_collision.launch  ompl_planning.launch  ompl_planning_ee.launch  ompl_planning_real.launch
resources/config/: end_points_panda_arm.csv  end_points_panda_arm_real.csv  obstacle_dense.csv  obstacle_narrow.csv  obstacle_real.csv  obstacle_sparse.csv  robot_panda_arm_ems.csv  robot_panda_dual_arm.csv  robot_snake.csv
resources/problems/: end_points_ee_panda_arm.csv  end_points_panda_arm.csv  end_points_panda_arm_sim.csv  end_points_panda_dual_arm.csv  end_points_snake.csv  obstacle_cluttered.csv
resources/result/: panda_dual_arm_sparse_ompl_path_3D.csv  panda_dual_arm_sparse_ompl_smooth_path_3D.csv  panda_dual_arm_sparse_ompl_time_ompl_3D.csv
resources/robots/superquadrics/: robot_panda_arm.csv  robot_panda_arm_radial.csv
resources/robots/urdf/: panda_arm.urdf  panda_arm.xacro  panda_arm_macro.xacro  panda_dual_arm.urdf  panda_dual_arm.xacro  snake.xacro
resources/urdf/: panda_arm.urdf  panda_arm.xacro  panda_arm_macro.xacro  panda_dual_arm.urdf  panda_dual_arm.xacro  snake.urdf
rviz/: path_planning.rviz  visualize_collision.rviz
src/: CMakeLists.txt  environment_publisher.cpp  moveit_visualize_collision.cpp  robot_visualizer.cpp  test_ik_solver.cpp  test_ik_solver_service.cpp  test_ompl_planner.cpp
src/planning_app/: CMakeLists.txt  collision_common.cpp  collision_helper.cpp  ompl_planner.cpp
src/util/: CMakeLists.txt  MultiBodyTree3D.cpp  Parse2dCsvFile.cpp  ParsePlanningSettings.cpp  ParseURDF.cpp  VisualizationUtils.cpp  imarker.cpp  interactive_robot.cpp  pose_string.cpp
srv/: SolveIK.srv
